# AnonMed

./: .gitignore  README.md  generate_all_csv.py  gt_asr.jsonl  merge_csv.py  pyproject.toml  scenarios.txt  scr_generate_llm_requests.py  tmp_eval_sample.jsonl
GenerateDataset/: README.md  combined_by_columns.csv  extract_subdialogs.py  scenarious_from_max.txt  scr_generate_llm_requests.py
GenerateDialogs/: README.md  cleaning_punctuation.py  example_generated.jsonl  example_generated.txt  extract_subdialogs.py  filter_duplicates.py  final_cleaned_subdialogs.jsonl  final_cleaned_subdialogs.txt  final_with_newlines.jsonl  final_with_newlines.txt  final_without_newlines.jsonl  final_without_newlines.txt  growth_points.md  pipeline.py  pipeline_with_newlines.py  remove_newlines.py  scenarios.txt  scr_generate_llm_requests.py  validate_spans.py
anonmed/: __init__.py
asr_integer_extractor/: __init__.py
configs/ml/: PIDR_finetuned.in_the_wild_russian_pii_speech.yaml  train.example.yaml
data/combined_test/: combined_test100.csv
data/midnames/: midnames_probability.csv
data/names/: names.csv
data/surname/: scr.py  surnames.csv
datasets/FIO/: generated_fio.csv  readme.md
datasets/midnames/: midnames.csv  scr.py
datasets/names/: names_probability.csv  scr.py
datasets/surname/: surnames_probability.csv
gen_all/: README.md  merge_script.py
generate_numbers/: README.md  generate_all_csv.py
kill_uncorrect_dialogs/: README.md  output.jsonl
metrics_dialogs/: README.md  metrics_dialogs.py
russian_data_generator/: DATA_FORMATS.md  README.md  cli.py  pyproject.toml
russian_data_generator/config/: groupings.py  lists.py
russian_data_generator/formatting/: numbers.py
russian_data_generator/generators/: age.py  birth_certificate.py  birthdate.py  driver_license.py  inn.py  mse.py  oms.py  passport.py  phone.py  snils.py
russian_data_generator/russian_data_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
russian_data_generator/tests/: test_generators_smoke.py
scripts/: evaluate_in_the_wild_1_pipeline.py  evaluate_numeric_pii_metrics.py  evaluate_pii_metrics.py  test.py
src/anonmed/: __init__.py  anonymizer.py  api.py  cli.py
src/asr_integer_extractor/: __init__.py  api.py  cli.py  disfluency.py  extractor.py  fuzzy.py  lexicon.py  models.py  normalization.py  parser.py  pipeline.py  punctuation.py  scoring.py
src/evaluation/: core.py
src/ml/: __init__.py  (+1 more)
tests/: conftest.py  test_anonmed_package.py  test_anonymization_numeric_pii.py  test_asr_contact_date_normalization.py  test_asr_document_number_normalization.py  test_asr_repetition_deduplication.py  test_bootstrap.py  test_disfluency_pipeline.py  test_disfluency_preprocessing_spec.py  test_extended_integer_examples_v3.py  test_extractor.py  test_in_the_wild_pipeline_script.py  test_ml_datasets_metrics_runner.py  test_ml_orchestration.py  test_ml_visualization_dashboard.py  test_numeric_pii_evaluator_metrics.py  test_numeric_pii_rules.py  test_numeric_post_processing.py  test_original_text_restoration.py  test_parser.py  test_pidr_model_and_training.py  test_pii_anonymizer.py  test_pii_evaluator_metrics.py  test_punctuation_preprocessing.py  test_qwen06b_model.py  test_replacement.py  test_scoring.py  test_tokenization.py
transclit/: .~lock.filtered_emails.csv#  README.md  filtered_emails.csv  translit.py
(+108 files in other folders)
