[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "asr-integer-extractor"
version = "0.1.0"
description = "Non-destructive extraction and normalization of integer spans from noisy Russian ASR text."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "asr-integer-extractor contributors" }
]
dependencies = [
  "numpy>=1.23"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
asr-integer-extract = "asr_integer_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/asr_integer_extractor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
