[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "anonmed"
version = "0.2.0"
description = "AnonMed platform foundation with reusable preprocessing utilities for noisy Russian ASR text."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AnonMed contributors" }
]
dependencies = [
  "numpy>=1.23"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
anonmed-preprocess = "anonmed.cli:main"
asr-integer-extract = "asr_integer_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anonmed", "src/asr_integer_extractor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
