[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "anonmed"
version = "0.2.0"
description = "AnonMed platform foundation with reusable preprocessing utilities for noisy Russian ASR text."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AnonMed contributors" }
]
dependencies = [
  "numpy>=1.23",
  "pyarrow>=17.0"
]

[project.optional-dependencies]
ml = [
  "accelerate>=1.0",
  "datasets>=2.20",
  "gliner2>=1.3",
  "natasha>=1.6",
  "peft>=0.12",
  "pyarrow>=17.0",
  "PyYAML>=6.0",
  "safetensors>=0.4",
  "torch>=2.3",
  "transformers>=4.48",
  "tqdm>=4.66"
]
tools = [
  "num2words>=0.5.13",
  "requests>=2.31"
]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "PyYAML>=6.0",
  "ruff>=0.6"
]

[project.scripts]
anonmed = "anonmed.cli:main"
anonmed-preprocess = "anonmed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anonmed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
